[gd_scene load_steps=2 format=3 uid="uid://dkbd01s367esl"]

[ext_resource type="Script" path="res://scripts/tag_full_search.gd" id="1_tnglk"]

[node name="TagFullSearch" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tnglk")

[node name="DimColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(550, 320)
layout_mode = 2
color = Color(0.176471, 0.227451, 0.301961, 1)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(550, 320)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tag Searcher"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SearchItemList" type="ItemList" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="SearchTag" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Search tag"

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="AddSelected" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Add Selected"

[node name="APICooldown" type="Timer" parent="."]
wait_time = 1.25
